gitops/apps/komga/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: komga
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - komga.bealv.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: komga
          port: 8080
