gitops/apps/komga/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komga
  annotations:
    cert-manager.io/cluster-issuer: bealvio
    external-dns.alpha.kubernetes.io/target: bealv.io
spec:
  ingressClassName: 'external'
  rules:
    - host: komga.bealv.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komga
                port:
                  number: 8080
  tls:
    - hosts:
        - komga.bealv.io
      secretName: tls-komga
